--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,38 @@
 ---
-const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
+  <kbd>↑</kbd>
+  <kbd>↑</kbd>
+  <kbd>↓</kbd>
+  <kbd>↓</kbd>
+  <kbd>←</kbd>
+  <kbd>→</kbd>
+  <kbd>←</kbd>
+  <kbd>→</kbd>
+  <kbd>B</kbd>
+  <kbd>A</kbd>
 </footer>
+
 <style>
 	footer {
-		padding: 25px;
+    padding: 20px 0px;
 		text-align: center;
+    display: flex;
+    flex-direction: row;
+    column-gap: 10px;
+    justify-content: center;
+    letter-spacing: 1ch;
 	}
+  
+  kbd {
+    border-radius: 4px;
+    padding: 8px;
+    font-size: 16px;
+    box-shadow: 0 4px 0 #f2f2f2;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 </style>
