--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
+import Job from '../components/Job.astro';
 ---
 
 <!DOCTYPE html>
@@ -13,37 +14,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
+      <Job link="https://pesto.app" company="Pesto" title="CTO, Co-Founder" startDate="January 2019" endDate="Present" />
+      <Job link="https://www.businesswire.com/news/home/20170912006567/en/Avi-Networks-Acquires-StacksWare-to-Enhance-SaaS-Delivery-of-ADC-Security-and-Analytics-Products" company="StacksWare (acquired by VMware)" title="CTO, Co-Founder" startDate="June 2015" endDate="January 2019" />
+      <Job link="https://asana.com" company="Asana" title="Software Engineering Intern" startDate="June 2014" endDate="September 2014" />
+      <Job link="https://palantir.com" company="Palantir" title="Software Engineering Intern" startDate="June 2013" endDate="September 2013" />
 		</main>
 		<Footer />
 	</body>
