--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,13 @@
-/*
-  The CSS in this style tag is based off of Bear Blog's default CSS.
-  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
-  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
- */
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 100 900; /* Range of weights supported */
+  font-display: optional;
+  src: url(/inter-var-latin.woff2) format('woff2');
+}
+
 body {
-	font-family: Verdana, sans-serif;
+	font-family: Inter, sans-serif;
 	margin: auto;
 	padding: 20px;
 	max-width: 65ch;
@@ -14,6 +17,7 @@ body {
 	overflow-wrap: break-word;
 	line-height: 1.5;
 	color: #444;
+  user-select: none;
 }
 h1,
 h2,
@@ -65,3 +69,4 @@ blockquote {
 	margin: 0px;
 	font-style: italic;
 }
+
