Add in better styling for answer reveal

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -35,6 +35,8 @@
 <script is:inline>
   let keyIndex = 0
   const keyOrder = ["ArrowUp", "ArrowUp", "ArrowDown", "ArrowDown", "ArrowLeft", "ArrowRight", "ArrowLeft", "ArrowRight", "KeyB", "KeyA"]
+  
+  const EMAIL = `vivek@pesto.app` 
 
   window.addEventListener("keydown", event => {
     if (!keyOrder.includes(event.code)) {
@@ -46,15 +48,70 @@
       keyIndex++
       if (keyIndex === keyOrder.length) {
         const answer = document.querySelector(".answer")
-        answer.innerHTML = `vivek@pesto.app` 
+        answer.innerHTML = EMAIL
 
         const answerContainer = document.querySelector(".answer-reveal-row")
         answerContainer.setAttribute("style", "display: flex;")
+        
+        answerContainer.addEventListener("click", () => {
+          copy(EMAIL)
+        })
       }
     } else {
       keyIndex = 0
     }
   })
+ 
+  /* 
+   * Shamelessly copied from Rauno: 
+   * -> https://github.com/raunofreiberg/inspx/blob/79531ad0c9ae75c4409b42000b78e83ac81c072d/www/src/utils.js#L1
+   */
+  function copy(input, { target = document.body } = {}) {
+    const element = document.createElement('textarea');
+    const previouslyFocusedElement = document.activeElement;
+
+    element.value = input;
+
+    // Prevent keyboard from showing on mobile
+    element.setAttribute('readonly', '');
+
+    element.style.contain = 'strict';
+    element.style.position = 'absolute';
+    element.style.left = '-9999px';
+    element.style.fontSize = '12pt'; // Prevent zooming on iOS
+
+    const selection = document.getSelection();
+    let originalRange = false;
+    if (selection.rangeCount > 0) {
+      originalRange = selection.getRangeAt(0);
+    }
+
+    target.append(element);
+    element.select();
+
+    // Explicit selection workaround for iOS
+    element.selectionStart = 0;
+    element.selectionEnd = input.length;
+
+    let isSuccess = false;
+    try {
+      isSuccess = document.execCommand('copy');
+    } catch {}
+
+    element.remove();
+
+    if (originalRange) {
+      selection.removeAllRanges();
+      selection.addRange(originalRange);
+    }
+
+    // Get the focus back on the previously focused element, if any
+    if (previouslyFocusedElement) {
+      previouslyFocusedElement.focus();
+    }
+
+    return isSuccess;
+  }
 </script>
 
 <style>
@@ -81,8 +138,9 @@
     align-items: center;
     justify-content: center;
     column-gap: 10px;
-    background-color: #f2f2f2;
+    background-color: var(--answer-reveal-background);
     border-radius: 9999px;
+    user-select: text;
   }
   
   .copy-button {
