--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,7 @@ import Job from '../components/Job.astro';
       <Job link="https://www.businesswire.com/news/home/20170912006567/en/Avi-Networks-Acquires-StacksWare-to-Enhance-SaaS-Delivery-of-ADC-Security-and-Analytics-Products" company="StacksWare (acquired by VMware)" title="CTO, Co-Founder" startDate="June 2015" endDate="January 2019" />
       <Job link="https://asana.com" company="Asana" title="Software Engineering Intern" startDate="June 2014" endDate="September 2014" />
       <Job link="https://palantir.com" company="Palantir" title="Software Engineering Intern" startDate="June 2013" endDate="September 2013" />
+      <Job link="https://stanford.edu" company="Stanford" title="Student, Computer Science" startDate="September 2011" endDate="June 2015" />
 		</main>
 		<Footer />
 	</body>
