Add considerable amount off CSS improvements

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,170 +1,14 @@
 ---
+import CheatCode from './CheatCode';
 ---
 
 <footer>
-  <div class="challenge-row">
-    <kbd>↑</kbd>
-    <kbd>↑</kbd>
-    <kbd>↓</kbd>
-    <kbd>↓</kbd>
-    <kbd>←</kbd>
-    <kbd>→</kbd>
-    <kbd>←</kbd>
-    <kbd>→</kbd>
-    <kbd>B</kbd>
-    <kbd>A</kbd>
-  </div>
-  
-  <div class="answer-reveal-row">
-    <div class="answer" />
-    
-    <div class="copy-button">
-      <svg width="15" height="15" viewBox="0 0 15 15" fill="none">
-        <path
-          d="M1 9.50006C1 10.3285 1.67157 11.0001 2.5 11.0001H4L4 10.0001H2.5C2.22386 10.0001 2 9.7762 2 9.50006L2 2.50006C2 2.22392 2.22386 2.00006 2.5 2.00006L9.5 2.00006C9.77614 2.00006 10 2.22392 10 2.50006V4.00002H5.5C4.67158 4.00002 4 4.67159 4 5.50002V12.5C4 13.3284 4.67158 14 5.5 14H12.5C13.3284 14 14 13.3284 14 12.5V5.50002C14 4.67159 13.3284 4.00002 12.5 4.00002H11V2.50006C11 1.67163 10.3284 1.00006 9.5 1.00006H2.5C1.67157 1.00006 1 1.67163 1 2.50006V9.50006ZM5 5.50002C5 5.22388 5.22386 5.00002 5.5 5.00002H12.5C12.7761 5.00002 13 5.22388 13 5.50002V12.5C13 12.7762 12.7761 13 12.5 13H5.5C5.22386 13 5 12.7762 5 12.5V5.50002Z"
-          fill="currentColor"
-          fill-rule="evenodd"
-          clip-rule="evenodd"
-        ></path>
-      </svg>
-    </div>
-  </div>
+  <CheatCode client:visible />
 </footer>
 
-<script is:inline>
-  let keyIndex = 0
-  const keyOrder = ["ArrowUp", "ArrowUp", "ArrowDown", "ArrowDown", "ArrowLeft", "ArrowRight", "ArrowLeft", "ArrowRight", "KeyB", "KeyA"]
-  
-  const EMAIL = `vivek@pesto.app` 
-
-  window.addEventListener("keydown", event => {
-    if (!keyOrder.includes(event.code)) {
-      return
-    }
-    event.preventDefault()
-
-    if (event.code === keyOrder[keyIndex]) {
-      keyIndex++
-      if (keyIndex === keyOrder.length) {
-        const answer = document.querySelector(".answer")
-        answer.innerHTML = EMAIL
-
-        const answerContainer = document.querySelector(".answer-reveal-row")
-        answerContainer.setAttribute("style", "display: flex;")
-        
-        answerContainer.addEventListener("click", () => {
-          copy(EMAIL)
-        })
-      }
-    } else {
-      keyIndex = 0
-    }
-  })
- 
-  /* 
-   * Shamelessly copied from Rauno: 
-   * -> https://github.com/raunofreiberg/inspx/blob/79531ad0c9ae75c4409b42000b78e83ac81c072d/www/src/utils.js#L1
-   */
-  function copy(input, { target = document.body } = {}) {
-    const element = document.createElement('textarea');
-    const previouslyFocusedElement = document.activeElement;
-
-    element.value = input;
-
-    // Prevent keyboard from showing on mobile
-    element.setAttribute('readonly', '');
-
-    element.style.contain = 'strict';
-    element.style.position = 'absolute';
-    element.style.left = '-9999px';
-    element.style.fontSize = '12pt'; // Prevent zooming on iOS
-
-    const selection = document.getSelection();
-    let originalRange = false;
-    if (selection.rangeCount > 0) {
-      originalRange = selection.getRangeAt(0);
-    }
-
-    target.append(element);
-    element.select();
-
-    // Explicit selection workaround for iOS
-    element.selectionStart = 0;
-    element.selectionEnd = input.length;
-
-    let isSuccess = false;
-    try {
-      isSuccess = document.execCommand('copy');
-    } catch {}
-
-    element.remove();
-
-    if (originalRange) {
-      selection.removeAllRanges();
-      selection.addRange(originalRange);
-    }
-
-    // Get the focus back on the previously focused element, if any
-    if (previouslyFocusedElement) {
-      previouslyFocusedElement.focus();
-    }
-
-    return isSuccess;
-  }
-</script>
-
 <style>
-	footer {
+  footer {
     padding: 20px 0px;
-		text-align: center;
-	}
-  
-  .challenge-row {
-    display: flex;
-    flex-direction: row;
-    column-gap: 10px;
-    align-items: center;
-  }
-  
-  .answer-reveal-row {
-    margin: 50px 0px 0px 0px;
-    padding: 10px 20px;
-    cursor: copy;
-    /* Declarative code will change this back to flex */
-    display: none;
-    
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    column-gap: 10px;
-    background-color: var(--colors-grayA2);
-    border-radius: 9999px;
-    user-select: text;
-    
-    transition: background-color 200ms ease; 
-  }
-  
-  .answer-reveal-row:hover {
-    background-color: var(--colors-grayA3);
-  }
-  
-  .copy-button {
-    padding: 5px 0px 0px 0px;
-  }
-  
-  .label {
-    padding: 5px 15px 0px 0px;
-  }
-  
-  kbd {
-    letter-spacing: 1ch;
-    border-radius: 4px;
-    padding: 8px;
-    font-size: 16px;
-    box-shadow: 0 4px 0 #f2f2f2;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
   }
 </style>
