--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,7 @@
   /* Colors manually pulled from Radix Colors */
   --colors-grayA2: hsl(0 0% 99.0%);
   --colors-grayA3: hsl(0 0% 95.1%);
+  --colors-grayA5: hsl(0 0% 90.9%);
 }
 
 body {
