--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,22 +12,27 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
       {SITE_DESCRIPTION}
     </h4>
   </div>
-	<nav>
-		<HeaderLink href="https://twitter.com/virtuallyvivek" target="_blank">Twitter</HeaderLink>
-	</nav>
+  <nav>
+    <HeaderLink href="https://twitter.com/virtuallyvivek" target="_blank">Twitter</HeaderLink>
+    <HeaderLink href="https://github.com/VivekNair/personal-site" target="_blank">Github</HeaderLink
+    >
+  </nav>
 </header>
 <style>
-	header {
-		margin: 0em 0 2em;
-	}
-	h2 {
+  header {
+    margin: 0em 0 2em;
+  }
+  h2 {
     margin: 10px 0px 0px 0px;
-	}
+  }
   h4 {
     margin: 0em;
     font-weight: 400;
   }
   nav {
     margin: 20px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+    column-gap: 10px;
   }
 </style>
