Add in better stylization of titles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,14 +17,14 @@ import Job from '../components/Job.astro';
       <Job
         link="https://pesto.app"
         company="Pesto"
-        title="CTO, Co-Founder"
+        title="CTO, Co-founder"
         startDate="January 2019"
         endDate="Present"
       />
       <Job
         link="https://www.businesswire.com/news/home/20170912006567/en/Avi-Networks-Acquires-StacksWare-to-Enhance-SaaS-Delivery-of-ADC-Security-and-Analytics-Products"
         company="StacksWare (acquired by VMware Avi Networks)"
-        title="Co-Founder"
+        title="Co-founder"
         startDate="June 2015"
         endDate="January 2019"
       />
